# Projet_2025

./: .gitignore  Char Terrestre exigence id =1.txt  Char terrestre.txt  Exemple Trame Etats Drone.txt  Fiche présentation projet E6-IR-2025-ProspectionImplantationEoliennes-Drones-3Etudiants_v1.3.docx  Prospection Terrestre pour l’implantation d’éoliennes.pptx  Présentation de tache n°3.pptx  diag exigence.txt  diagrame_gantt.xlsm  extensions-list.txt  extention.txt  fiche_suivi.txt  install_opencv_4100.sh  note.txt  ~$che présentation projet E6-IR-2025-ProspectionImplantationEoliennes-CharTerrestre-3Etudiants_v1.1.docx  ~$ojet prospection implantation rapport.docx
.metadata/: version.ini
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.jboss.tools.central/: jboss_buzz.xml
@Chai3d-3.2.0_VisualStudio_2015_x64-VirtualDevice-Formes-08/: CHAI3D-VS2015-with-modules.VC.db  CHAI3D-VS2015.VC.db  CHAI3D-VS2015.sln  CHAI3D-VS2015.vcxproj
@Chai3d-3.2.0_VisualStudio_2015_x64-VirtualDevice-Formes-08/src/: chai3d.h
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/: CMakeLists.txt  CheminsCmakeJavaPython.txt  CreerLesWrapperDeMappingJavaPythonDuDroneCharTelemetry.docx  Erreur_PPyUnicodeUCS2_AsUTF8StringLinux64bits.txt  Erreur_Shm_Open_SousLinux64bits.txt  Thumbs.db
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Java/Pios32/: JNIFileMappingDroneCharTelemetryClientJNI.java  JNIVirtualDroneCharTelemetryJNI.java  SWIGTYPE_p_unsigned_char.java  cFileMappingDroneCharTelemetryServeur.java  cVirtualDroneCharTelemetry.java
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Java/Pios64/: JNIFileMappingDroneCharTelemetryClient.java  JNIFileMappingDroneCharTelemetryServeur.java  JNIFileMappingDroneCharTelemetryServeurJNI.java  JNIVirtualDroneCharTelemetry.java  cFileMappingDroneCharTelemetryClient.java
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Java/Windows/: JNIFileMappingDroneCharTelemetryClient.exp  JNIFileMappingDroneCharTelemetryClient.java  JNIFileMappingDroneCharTelemetryClient.lib  JNIFileMappingDroneCharTelemetryClientJNI.java  JNIFileMappingDroneCharTelemetryServeur.exp  JNIFileMappingDroneCharTelemetryServeur.java  JNIFileMappingDroneCharTelemetryServeur.lib  JNIFileMappingDroneCharTelemetryServeurJNI.java  JNIVirtualDroneCharTelemetry.exp  JNIVirtualDroneCharTelemetry.java  JNIVirtualDroneCharTelemetry.lib  JNIVirtualDroneCharTelemetryJNI.java  cFileMappingDroneCharTelemetryClient.java  cFileMappingDroneCharTelemetryServeur.java  cVirtualDroneCharTelemetry.java
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Python/Pios32/: pyFileMappingDroneCharTelemetryClient.py  pyFileMappingDroneCharTelemetryServeur.py  pyVirtualDroneCharTelemetry.py
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Python/Pios64/: _pyFileMappingDroneCharTelemetryClient.pyd  _pyFileMappingDroneCharTelemetryServeur.pyd  _pyVirtualDroneCharTelemetry.pyd
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/Librairies/Python/Windows/: _pyFileMappingDroneCharTelemetryClient.exp  _pyFileMappingDroneCharTelemetryClient.lib  _pyFileMappingDroneCharTelemetryClient.pyd  _pyFileMappingDroneCharTelemetryServeur.exp  _pyFileMappingDroneCharTelemetryServeur.lib  _pyFileMappingDroneCharTelemetryServeur.pyd  _pyVirtualDroneCharTelemetry.exp  _pyVirtualDroneCharTelemetry.lib  _pyVirtualDroneCharTelemetry.pyd  pyFileMappingDroneCharTelemetryClient.py  pyFileMappingDroneCharTelemetryServeur.py  pyVirtualDroneCharTelemetry.py
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/lang/include/: cFileMappingDroneCharTelemetryClient.h  cFileMappingDroneCharTelemetryServeur.h  cVirtualDroneCharTelemetry.h
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/lang/src/: cFileMappingDroneCharTelemetryClient.cpp  cFileMappingDroneCharTelemetryServeur.cpp  cVirtualDroneCharTelemetry.cpp
@Wrapper_FileMapDroneCharTelemetry_XW_v3.0/lang/swig/: CMakeLists.txt  jlibFileMappingDroneCharTelemetryClient_swig.i  jlibFileMappingDroneCharTelemetryServeur_swig.i  jlibVirtualDroneCharTelemetry_swig.i  pylibFileMappingDroneCharTelemetryClient_swig.i  pylibFileMappingDroneCharTelemetryServeur_swig.i  pylibVirtualDroneCharTelemetry_swig.i
Chai3d-3.2.0/: CHAI3D-VS2015-with-modules.sln  CHAI3D-VS2015.vcxproj.filters  Compatibilite_Chai3D_VirtualDevice_Reseau.docx
client_pilotage_video_v2/: client.bat
client_pilotage_video_v2/src/: BackgroundImagePanel.java  Client_envoit_PMPS.java  Client_test.java  Pilotage_manuel_par_pave_Souris.java  Tempo.java  ThreadJNIFalcon.java  VideoPanel.java  VideoStreamServer.java
test_unitaire_julien/test_aquisition_image/: CameraUDPStreamer.java  Main.java
test_unitaire_julien/test_arp/: spam.java
test_unitaire_julien/test_camera_opencv/: Main.java  README.md
test_unitaire_julien/test_empilement_image_java/: ImageLayeringPanel.java
test_unitaire_julien/test_opencv/: README.md
test_unitaire_julien/test_opencv_plus_ihm_capteur_virtuel/: cmd_to_run.txt
test_unitaire_julien/test_opencv_tcp/: cmd_to_run.txt  gen_class.cmd
version_android_client_v1/Client_video/: .project  AndroidManifest.xml  project.properties
version_android_client_v2/client/: settings.gradle
version_char_full_v4/: log.txt
version_char_full_v4/drone_full/: class_client.plantuml  class_drone.plantuml  client.bat  drone.sh  drone_pipeline.sh  sequence_client.plantuml  sequence_drone.plantuml  sequence_traitement.plantuml
version_full/drone_sender/: compile.txt
version_full/reciver_sender_affichage_image/: cmd_to_run.txt
version_full_v1/drone_sender/: MANIFEST.MF
version_full_v2/drone_image_full/: cmd_to_run.txt
version_full_v3/drone_image_full/: README.md  bloc_diagram.plantuml  class_client.plantuml  class_drone.plantuml  class_traitement minimaliste.plantuml  class_traitement pt1.plantuml  class_traitement pt2.plantuml  class_traitement pt3.plantuml  class_traitement.plantuml  client.bat  cmd_to_run.txt  drone.bat  drone.sh  drone_pipeline.bat  sequence_traitement.plantuml  traitement.bat
(+333 files in other folders)
